--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -4,50 +4,40 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Sampletown Chamber Directory</title>
-  <meta name="description" content="Member directory for the Sampletown Chamber of Commerce, featuring trusted local businesses." />
+  <title>Discover Sampletown</title>
+  <meta name="description" content="Discover what Sampletown has to offer! Explore key locations and features of our community." />
   <meta name="author" content="Meline Levao" />
 
-  <!-- Open Graph / Social Sharing -->
-  <meta property="og:title" content="Sampletown Chamber of Commerce" />
-  <meta property="og:description" content="Explore trusted local businesses in Sampletown." />
-  <meta property="og:image" content="images/social-banner.png" />
-  <meta property="og:url" content="https://mline03.github.io/wdd231/chamber/directory.html" />
+  <!-- Open Graph -->
+  <meta property="og:title" content="Discover Sampletown" />
+  <meta property="og:description" content="Explore the best spots in Sampletown." />
+  <meta property="og:image" content="images/og-image.png" />
+  <meta property="og:url" content="https://mline03.github.io/wdd231/chamber/discover.html" />
 
-  <!-- Favicon -->
   <link rel="icon" href="images/favicon.ico" />
-
-  <!-- Google Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
-
-  <!-- Stylesheets -->
   <link rel="stylesheet" href="styles/normalize.css" />
   <link rel="stylesheet" href="styles/styles.css" />
+  <link rel="stylesheet" href="styles/medium.css" media="(min-width: 641px)" />
 </head>
 <body>
   <header>
     <h2>Sampletown Chamber of Commerce</h2>
     <nav>
       <ul>
-        <li><a href="index.html" title="Home page">Home</a></li>
-        <li><a href="directory.html" title="Member directory" aria-current="page">Directory</a></li>
-        <li><a href="contact.html" title="Contact us">Contact</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="directory.html">Directory</a></li>
+        <li><a href="discover.html" aria-current="page">Discover</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
 
   <main>
-    <h1>Sampletown Chamber Directory</h1>
+    <h1>Discover Sampletown</h1>
+    <aside id="visitMessage"></aside>
 
-    <div class="view-toggle" role="group" aria-label="Toggle directory view">
-      <button id="gridViewBtn" aria-pressed="true">Grid View</button>
-      <button id="listViewBtn" aria-pressed="false">List View</button>
-    </div>
-
-    <section id="members" class="grid-view" aria-label="Member directory list/grid">
-      <!-- Members loaded dynamically here -->
+    <section id="cardGrid" class="grid-container" aria-label="Points of Interest">
+      <!-- JS populates 8 cards here -->
     </section>
   </main>
 
@@ -55,6 +45,6 @@
     <p>&copy; <span id="currentYear"></span> Sampletown Chamber of Commerce | Last Updated: <span id="lastModified"></span></p>
   </footer>
 
-  <script src="scripts/directory.js"></script>
+  <script src="scripts/discover.js"></script>
 </body>
 </html>
