--- a/chamber/join.html
+++ b/chamber/join.html
@@ -1,79 +1,241 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Become a member of the Sampletown Chamber of Commerce. Fill out our membership form.">
+  <meta name="author" content="Meline Levao">
   <title>Join the Chamber | Sampletown</title>
-  <meta name="description" content="Become a member of the Sampletown Chamber of Commerce. Fill out our membership form." />
-  <meta name="author" content="Your Name or Chamber" />
 
-  <!-- Open Graph / Social Sharing -->
-  <meta property="og:title" content="Join Sampletown Chamber" />
-  <meta property="og:description" content="Become part of Sampletown’s business community." />
-  <meta property="og:image" content="images/og-image.png" />
-  <meta property="og:url" content="https://yourusername.github.io/wdd231/chamber/join.html" />
+  <meta property="og:title" content="Join Sampletown Chamber">
+  <meta property="og:description" content="Become part of Sampletown’s business community.">
+  <meta property="og:url" content="https://yourusername.github.io/wdd231/chamber/join.html">
+  <meta property="og:image" content="images/og-image.png">
 
-  <link rel="icon" href="images/favicon.ico" />
-  <link rel="stylesheet" href="styles/normalize.css" />
-  <link rel="stylesheet" href="styles/styles.css" />
-  <link rel="stylesheet" href="styles/medium.css" media="(min-width: 641px)" />
+  <link rel="icon" href="images/favicon.ico">
+  <link rel="stylesheet" href="styles/normalize.css">
+  <link rel="stylesheet" href="styles/styles.css">
+  <link rel="stylesheet" href="styles/medium.css">
+
+  <style>
+    .membership-card {
+      background: #f5f5f5;
+      padding: 1rem;
+      border-radius: 5px;
+      opacity: 0;
+      transform: translateY(30px);
+      animation: fadeSlideIn 1s ease forwards;
+    }
+
+    .membership-card:nth-child(1) { animation-delay: 0.2s; }
+    .membership-card:nth-child(2) { animation-delay: 0.4s; }
+    .membership-card:nth-child(3) { animation-delay: 0.6s; }
+    .membership-card:nth-child(4) { animation-delay: 0.8s; }
+
+    @keyframes fadeSlideIn {
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    .modal {
+      display: none;
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background-color: rgba(0,0,0,0.7);
+      justify-content: center;
+      align-items: center;
+    }
+
+    .modal-content {
+      background: white;
+      padding: 2rem;
+      max-width: 400px;
+      position: relative;
+    }
+
+    .close {
+      position: absolute;
+      top: 10px;
+      right: 15px;
+      font-size: 1.5rem;
+      cursor: pointer;
+    }
+
+    .form-container {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 2rem;
+      margin: 2rem;
+    }
+
+    form {
+      flex: 1 1 300px;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+
+    .cards-container {
+      flex: 1 1 300px;
+      display: grid;
+      gap: 1rem;
+    }
+
+    @media (max-width: 768px) {
+      .form-container {
+        flex-direction: column;
+      }
+    }
+  </style>
 </head>
 <body>
   <header>
-    <h2>Sampletown Chamber of Commerce</h2>
+    <h1>Join the Chamber</h1>
     <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="directory.html">Directory</a></li>
-        <li><a href="discover.html">Discover</a></li>
-        <li><a href="join.html" aria-current="page">Join</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
+      <!-- Navigation links -->
     </nav>
   </header>
 
   <main>
-    <h1>Join the Chamber</h1>
-    <p>Fill out the form below to become a member of the Sampletown Chamber of Commerce.</p>
+    <div class="form-container">
+      <form method="get" action="thankyou.html">
+        <label>
+          First Name:
+          <input type="text" name="firstName" required title="Enter your first name" autocomplete="given-name">
+        </label>
 
-    <form action="thankyou.html" method="post">
-      <div class="form-group">
-        <label for="name">Name<span aria-hidden="true">*</span>:</label>
-        <input type="text" id="name" name="name" required />
+        <label>
+          Last Name:
+          <input type="text" name="lastName" required title="Enter your last name" autocomplete="family-name">
+        </label>
+
+        <label>
+          Organization Title:
+          <input type="text" name="orgTitle" title="Enter your title" autocomplete="organization-title" pattern="[A-Za-z\s\-]{7,}">
+        </label>
+
+        <label>
+          Email:
+          <input type="email" name="email" required title="Enter your email" autocomplete="email" placeholder="name@example.com">
+        </label>
+
+        <label>
+          Mobile Phone:
+          <input type="tel" name="phone" required title="Enter your mobile number" autocomplete="tel">
+        </label>
+
+        <label>
+          Organization Name:
+          <input type="text" name="organization" required title="Enter your organization" autocomplete="organization">
+        </label>
+
+        <label>
+          Membership Level:
+          <select name="membershipLevel" required title="Choose a membership level">
+            <option value="">Select one</option>
+            <option value="NP">NP Membership (Free)</option>
+            <option value="Bronze">Bronze Membership</option>
+            <option value="Silver">Silver Membership</option>
+            <option value="Gold">Gold Membership</option>
+          </select>
+        </label>
+
+        <label>
+          Organization Description:
+          <textarea name="description" title="Describe your organization"></textarea>
+        </label>
+
+        <input type="hidden" name="timestamp" id="timestamp">
+
+        <input type="submit" value="Submit Membership Application">
+      </form>
+
+      <div class="cards-container">
+        <div class="membership-card">
+          <h3>NP Membership</h3>
+          <a href="#" data-modal="npModal">View Benefits</a>
+        </div>
+        <div class="membership-card">
+          <h3>Bronze Membership</h3>
+          <a href="#" data-modal="bronzeModal">View Benefits</a>
+        </div>
+        <div class="membership-card">
+          <h3>Silver Membership</h3>
+          <a href="#" data-modal="silverModal">View Benefits</a>
+        </div>
+        <div class="membership-card">
+          <h3>Gold Membership</h3>
+          <a href="#" data-modal="goldModal">View Benefits</a>
+        </div>
       </div>
+    </div>
 
-      <div class="form-group">
-        <label for="email">Email<span aria-hidden="true">*</span>:</label>
-        <input type="email" id="email" name="email" required />
+    <!-- Modals -->
+    <div class="modal" id="npModal">
+      <div class="modal-content">
+        <span class="close" data-close="npModal">&times;</span>
+        <h2>NP Membership</h2>
+        <p>Perfect for non-profits. No fee. Access to events and basic listings.</p>
       </div>
+    </div>
 
-      <div class="form-group">
-        <label for="business">Business / Organization:</label>
-        <input type="text" id="business" name="business" />
+    <div class="modal" id="bronzeModal">
+      <div class="modal-content">
+        <span class="close" data-close="bronzeModal">&times;</span>
+        <h2>Bronze Membership</h2>
+        <p>Includes event discounts, directory listing, and training resources.</p>
       </div>
+    </div>
 
-      <div class="form-group">
-        <label for="address">Address:</label>
-        <input type="text" id="address" name="address" />
+    <div class="modal" id="silverModal">
+      <div class="modal-content">
+        <span class="close" data-close="silverModal">&times;</span>
+        <h2>Silver Membership</h2>
+        <p>All Bronze benefits plus homepage spotlight and promotional support.</p>
       </div>
+    </div>
 
-      <div class="form-group">
-        <label for="message">Tell us about your business / why you want to join:</label>
-        <textarea id="message" name="message" rows="5"></textarea>
+    <div class="modal" id="goldModal">
+      <div class="modal-content">
+        <span class="close" data-close="goldModal">&times;</span>
+        <h2>Gold Membership</h2>
+        <p>All benefits included. Priority advertising and VIP networking events.</p>
       </div>
-
-      <button type="submit">Submit</button>
-    </form>
+    </div>
   </main>
 
   <footer>
-    <p>&copy; <span id="currentYear"></span> Sampletown Chamber of Commerce</p>
+    <p>&copy; 2025 Sampletown Chamber of Commerce | Created by Meline Levao</p>
   </footer>
 
   <script>
-    // Set current year in footer
-    document.getElementById("currentYear").textContent = new Date().getFullYear();
+    // Set timestamp value
+    document.getElementById('timestamp').value = new Date().toISOString();
+
+    // Modal open/close logic
+    document.querySelectorAll('[data-modal]').forEach(link => {
+      link.addEventListener('click', e => {
+        e.preventDefault();
+        const modalId = e.target.getAttribute('data-modal');
+        document.getElementById(modalId).style.display = 'flex';
+      });
+    });
+
+    document.querySelectorAll('[data-close]').forEach(span => {
+      span.addEventListener('click', () => {
+        const modalId = span.getAttribute('data-close');
+        document.getElementById(modalId).style.display = 'none';
+      });
+    });
+
+    window.onclick = function(event) {
+      document.querySelectorAll('.modal').forEach(modal => {
+        if (event.target === modal) modal.style.display = "none";
+      });
+    };
   </script>
 </body>
 </html>
