--- a/chamber/join.html
+++ b/chamber/join.html
@@ -1,135 +1,82 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Become a member of the Sampletown Chamber of Commerce. Fill out our membership form.">
-  <meta name="author" content="Meline Levao">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Become a member of the Sampletown Chamber of Commerce. Fill out our membership form." />
+  <meta name="author" content="Meline Levao" />
   <title>Join the Chamber | Sampletown</title>
 
-  <meta property="og:title" content="Join Sampletown Chamber">
-  <meta property="og:description" content="Become part of Sampletown’s business community.">
-  <meta property="og:url" content="https://yourusername.github.io/wdd231/chamber/join.html">
-  <meta property="og:image" content="images/og-image.png">
+  <meta property="og:title" content="Join Sampletown Chamber" />
+  <meta property="og:description" content="Become part of Sampletown’s business community." />
+  <meta property="og:url" content="https://yourusername.github.io/wdd231/chamber/join.html" />
+  <meta property="og:image" content="images/og-image.png" />
 
-  <link rel="icon" href="images/favicon.ico">
-  <link rel="stylesheet" href="styles/normalize.css">
-  <link rel="stylesheet" href="styles/styles.css">
-  <link rel="stylesheet" href="styles/medium.css">
-
-  <style>
-    .membership-card {
-      background: #f5f5f5;
-      padding: 1rem;
-      border-radius: 5px;
-      opacity: 0;
-      transform: translateY(30px);
-      animation: fadeSlideIn 1s ease forwards;
-    }
-
-    .membership-card:nth-child(1) { animation-delay: 0.2s; }
-    .membership-card:nth-child(2) { animation-delay: 0.4s; }
-    .membership-card:nth-child(3) { animation-delay: 0.6s; }
-    .membership-card:nth-child(4) { animation-delay: 0.8s; }
-
-    @keyframes fadeSlideIn {
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
-    .modal {
-      display: none;
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background-color: rgba(0,0,0,0.7);
-      justify-content: center;
-      align-items: center;
-    }
-
-    .modal-content {
-      background: white;
-      padding: 2rem;
-      max-width: 400px;
-      position: relative;
-    }
-
-    .close {
-      position: absolute;
-      top: 10px;
-      right: 15px;
-      font-size: 1.5rem;
-      cursor: pointer;
-    }
-
-    .form-container {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 2rem;
-      margin: 2rem;
-    }
-
-    form {
-      flex: 1 1 300px;
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-    }
-
-    .cards-container {
-      flex: 1 1 300px;
-      display: grid;
-      gap: 1rem;
-    }
-
-    @media (max-width: 768px) {
-      .form-container {
-        flex-direction: column;
-      }
-    }
-  </style>
+  <link rel="icon" href="images/favicon.ico" />
+  <link rel="stylesheet" href="styles/normalize.css" />
+  <link rel="stylesheet" href="styles/styles.css" />
+  <link rel="stylesheet" href="styles/medium.css" />
+  <link rel="stylesheet" href="styles/join.css" />
 </head>
 <body>
   <header>
-    <h1>Join the Chamber</h1>
     <nav>
       <!-- Navigation links -->
     </nav>
   </header>
 
   <main>
+    <h1>Join the Chamber</h1>
+
     <div class="form-container">
       <form method="get" action="thankyou.html">
         <label>
           First Name:
-          <input type="text" name="firstName" required title="Enter your first name" autocomplete="given-name">
+          <input type="text" name="firstName" required title="Enter your first name" autocomplete="given-name" />
         </label>
 
         <label>
           Last Name:
-          <input type="text" name="lastName" required title="Enter your last name" autocomplete="family-name">
+          <input type="text" name="lastName" required title="Enter your last name" autocomplete="family-name" />
         </label>
 
         <label>
           Organization Title:
-          <input type="text" name="orgTitle" title="Enter your title" autocomplete="organization-title" pattern="[A-Za-z\s\-]{7,}">
+          <input
+            type="text"
+            name="orgTitle"
+            title="Enter your title"
+            autocomplete="organization-title"
+            pattern="[A-Za-z\s\-]{7,}"
+          />
         </label>
 
         <label>
           Email:
-          <input type="email" name="email" required title="Enter your email" autocomplete="email" placeholder="name@example.com">
+          <input
+            type="email"
+            name="email"
+            required
+            title="Enter your email"
+            autocomplete="email"
+            placeholder="name@example.com"
+          />
         </label>
 
         <label>
           Mobile Phone:
-          <input type="tel" name="phone" required title="Enter your mobile number" autocomplete="tel">
+          <input type="tel" name="phone" required title="Enter your mobile number" autocomplete="tel" />
         </label>
 
         <label>
           Organization Name:
-          <input type="text" name="organization" required title="Enter your organization" autocomplete="organization">
+          <input
+            type="text"
+            name="organization"
+            required
+            title="Enter your organization"
+            autocomplete="organization"
+          />
         </label>
 
         <label>
@@ -148,9 +95,9 @@
           <textarea name="description" title="Describe your organization"></textarea>
         </label>
 
-        <input type="hidden" name="timestamp" id="timestamp">
+        <input type="hidden" name="timestamp" id="timestamp" />
 
-        <input type="submit" value="Submit Membership Application">
+        <input type="submit" value="Submit Membership Application" />
       </form>
 
       <div class="cards-container">
@@ -174,35 +121,42 @@
     </div>
 
     <!-- Modals -->
-    <div class="modal" id="npModal">
+    <div class="modal" id="npModal" role="dialog" aria-labelledby="npTitle" aria-describedby="npDesc" tabindex="-1">
       <div class="modal-content">
-        <span class="close" data-close="npModal">&times;</span>
-        <h2>NP Membership</h2>
-        <p>Perfect for non-profits. No fee. Access to events and basic listings.</p>
+        <span class="close" data-close="npModal" role="button" aria-label="Close NP Membership modal">&times;</span>
+        <h2 id="npTitle">NP Membership</h2>
+        <p id="npDesc">Perfect for non-profits. No fee. Access to events and basic listings.</p>
       </div>
     </div>
 
-    <div class="modal" id="bronzeModal">
+    <div
+      class="modal"
+      id="bronzeModal"
+      role="dialog"
+      aria-labelledby="bronzeTitle"
+      aria-describedby="bronzeDesc"
+      tabindex="-1"
+    >
       <div class="modal-content">
-        <span class="close" data-close="bronzeModal">&times;</span>
-        <h2>Bronze Membership</h2>
-        <p>Includes event discounts, directory listing, and training resources.</p>
+        <span class="close" data-close="bronzeModal" role="button" aria-label="Close Bronze Membership modal">&times;</span>
+        <h2 id="bronzeTitle">Bronze Membership</h2>
+        <p id="bronzeDesc">Includes event discounts, directory listing, and training resources.</p>
       </div>
     </div>
 
-    <div class="modal" id="silverModal">
+    <div class="modal" id="silverModal" role="dialog" aria-labelledby="silverTitle" aria-describedby="silverDesc" tabindex="-1">
       <div class="modal-content">
-        <span class="close" data-close="silverModal">&times;</span>
-        <h2>Silver Membership</h2>
-        <p>All Bronze benefits plus homepage spotlight and promotional support.</p>
+        <span class="close" data-close="silverModal" role="button" aria-label="Close Silver Membership modal">&times;</span>
+        <h2 id="silverTitle">Silver Membership</h2>
+        <p id="silverDesc">All Bronze benefits plus homepage spotlight and promotional support.</p>
       </div>
     </div>
 
-    <div class="modal" id="goldModal">
+    <div class="modal" id="goldModal" role="dialog" aria-labelledby="goldTitle" aria-describedby="goldDesc" tabindex="-1">
       <div class="modal-content">
-        <span class="close" data-close="goldModal">&times;</span>
-        <h2>Gold Membership</h2>
-        <p>All benefits included. Priority advertising and VIP networking events.</p>
+        <span class="close" data-close="goldModal" role="button" aria-label="Close Gold Membership modal">&times;</span>
+        <h2 id="goldTitle">Gold Membership</h2>
+        <p id="goldDesc">All benefits included. Priority advertising and VIP networking events.</p>
       </div>
     </div>
   </main>
@@ -211,31 +165,6 @@
     <p>&copy; 2025 Sampletown Chamber of Commerce | Created by Meline Levao</p>
   </footer>
 
-  <script>
-    // Set timestamp value
-    document.getElementById('timestamp').value = new Date().toISOString();
-
-    // Modal open/close logic
-    document.querySelectorAll('[data-modal]').forEach(link => {
-      link.addEventListener('click', e => {
-        e.preventDefault();
-        const modalId = e.target.getAttribute('data-modal');
-        document.getElementById(modalId).style.display = 'flex';
-      });
-    });
-
-    document.querySelectorAll('[data-close]').forEach(span => {
-      span.addEventListener('click', () => {
-        const modalId = span.getAttribute('data-close');
-        document.getElementById(modalId).style.display = 'none';
-      });
-    });
-
-    window.onclick = function(event) {
-      document.querySelectorAll('.modal').forEach(modal => {
-        if (event.target === modal) modal.style.display = "none";
-      });
-    };
-  </script>
+  <script src="scripts/join.js" defer></script>
 </body>
 </html>
