Add discover page with dynamic POIs and visit message

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -7,10 +7,12 @@
   <meta name="description" content="Explore local attractions and community highlights in our area. Discover notable places, learn more, and get involved with the Chamber." />
   <meta name="author" content="Your Name" />
 
-  <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="../images/favicon.ico" type="image/x-icon" />
+  
+  <!-- Open Graph Metadata -->
   <meta property="og:title" content="Discover Our Area — Chamber" />
   <meta property="og:description" content="Check out 8 local attractions and what makes our region unique." />
-  <meta property="og:image" content="images/og-image.webp" />
+  <meta property="og:image" content="../images/og-image.webp" />
   <meta property="og:url" content="https://mline03.github.io/wdd231/chamber/discover.html" />
 
   <link rel="stylesheet" href="styles/style.css" />
