Add author meta tag and credit footer with developer name Meline Levao

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -5,14 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Discover Our Area — Chamber Discover Page</title>
   <meta name="description" content="Explore local attractions and community highlights in our area. Discover notable places, learn more, and get involved with the Chamber." />
-  <meta name="author" content="Your Name" />
+  <meta name="author" content="Meline Levao" />
 
-  <link rel="icon" href="../images/favicon.ico" type="image/x-icon" />
-  
-  <!-- Open Graph Metadata -->
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
   <meta property="og:title" content="Discover Our Area — Chamber" />
   <meta property="og:description" content="Check out 8 local attractions and what makes our region unique." />
-  <meta property="og:image" content="../images/og-image.webp" />
+  <meta property="og:image" content="images/og-image.webp" />
   <meta property="og:url" content="https://mline03.github.io/wdd231/chamber/discover.html" />
 
   <link rel="stylesheet" href="styles/style.css" />
@@ -34,7 +32,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Chamber of Commerce. All rights reserved.</p>
+    <p>&copy; 2025 Chamber of Commerce. All rights reserved. Developed by Meline Levao.</p>
   </footer>
 
   <script src="scripts/discover.js" defer></script>
